# sparta-stride

./: .gitignore  README.md  build-base-images.bash  pyproject.toml  requirements.txt
analyzer/: mqtt_sniffer.py  queue_monitor.py  save_rtsp_frames.py  test_rtsp_fps.py
cmds/: README.md  __init__.py  annotation_main.py  bytetrack_main.py  compare_fp32_fp16_ort_trt.py  dev_pose_estimation_config.yaml  export_onnx.py  rtmpos_main.py  unified_pose_estimation_service.py  yolo_main.py
stride/: README_DOCKER_SERVICES.md  docker-compose.yml
stride-kafka/: docker-compose.yml
stride-kafka/mediamtx/: docker-run.sh
stride-kafka/mp4-rtsp-source-raw/: docker-run.sh
stride-kafka/mp4-transcoder-sei/: Dockerfile  docker-run.bash
stride-kafka/prj-annotator/: annotator_main_yaml.py
stride-kafka/prj-bytetrack-cpu/: Dockerfile  bytetrack_main_yaml.py
stride-kafka/prj-cmc-cpu/: cmc_main_yaml.py
stride-kafka/prj-jerseyocr-gpu/: jerseyocr_main_yaml.py
stride-kafka/prj-rtmpose-onnx/: Dockerfile  rtmpose_main_yaml.py
stride-kafka/prj-yolox-onnx/: yolox_main_yaml.py  yolox_worker.py
stride/base-onnx-gpu/: Dockerfile
stride/base-opencv-cpu/: Dockerfile
stride/base-pytorch-gpu/: Dockerfile
stride/mp4-rtsp-source-raw/: Dockerfile  docker-build.sh
stride/mqtt-broker/: Dockerfile  docker-build.sh  docker-run.sh  mosquitto.conf  test.py  test.py.save
stride/prj-annotation-cpu/: Dockerfile  annotation_main_yaml.py  annotation_management.py  annotation_worker.py
stride/prj-annotator/: Dockerfile  annotator_main_yaml.py  annotator_worker.py
(+32 files in other folders)
