[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contanos"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "paho-mqtt==2.1.0",
    "av==14.4.0",
    "numpy==1.24.4"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["contanos*"]